fixing layout spacing

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -3,7 +3,7 @@
   }
   
   .main {
-    min-height: 40vh;
+    min-height: 100vh;
     padding: 3rem 0;
     flex: 1;
     display: flex;
